Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.851 devel

***   Fix ordering of clock enables with delayed assigns, bug613. [Jeremy Bennett]

***   Fix vpi_iterate on memory words, bug655. [Rich Porter]

****  Fix interface ports with comma lists, msg1058. [Ed Lander]

****  Fix clang warnings, bug668.  [Yutetsu Takatsukasa]


* Verilator 3.850 2013-06-02

**    Support interfaces and modports, bug102.  [Byron Bradley, Jeremy Bennett]

***   Duplicate clock gate optimization on by default, bug621.

****  Fix arrayed input compile error, bug645. [Krzysztof Jankowski]

****  Fix GCC version runtime changes, bug651. [Jeremy Bennett]

****  Fix packed array select internal error, bug652. [Krzysztof Jankowski]


* Verilator 3.847 2013-05-11

***   Add ALWCOMBORDER warning.  [KC Buckenmaier]
      
***   Add --pins-sc-uint and --pins-sc-biguint, bug638. [Alex Hornung]
      
****  Support "signal[vec]++".
      
****  Fix simulation error when inputs and MULTIDRIVEN, bug634. [Ted Campbell]
      
****  Fix module resolution with __, bug631. [Jason McMullan]
      
****  Fix packed array non-zero right index select crash, bug642. [Krzysztof Jankowski]
      
****  Fix nested union crash, bug643. [Krzysztof Jankowski]


* Verilator 3.846 2013-03-09

**    IEEE 1800-2012 is now the default language.  This adds 4 new keywords
      and updates the svdpi.h and vpi_user.h header files.

***   Add --report-unoptflat, bug611. [Jeremy Bennett]

***   Add duplicate clock gate optimization, msg980. [Varun Koyyalagunta]
      Disabled unless -OD or -O3 used, please try it as may get some
      significant speedups.

***   Fix wrong dot resolution under inlining. [Art Stamness]

****  Support pattern assignment features, bug616, bug617, bug618. [Ed Lander]

****  Support bind in $unit, bug602. [Ed Lander]
